# whatcable-linux

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: release.yml
src/core/: CMakeLists.txt  CableInfo.cpp  CableInfo.h  ChargingDiagnostic.cpp  ChargingDiagnostic.h  DeviceManager.cpp  DeviceManager.h  DeviceSummary.cpp  DeviceSummary.h  PDDecoder.cpp  PDDecoder.h  PowerDelivery.cpp  PowerDelivery.h  SysfsReader.cpp  SysfsReader.h  TypeCPort.cpp  TypeCPort.h  UDevMonitor.cpp  UDevMonitor.h  UsbClassDB.cpp  UsbClassDB.h  UsbDevice.cpp  UsbDevice.h  VendorDB.cpp  VendorDB.h
src/plasmoid/: CMakeLists.txt  metadata.json
src/plasmoid/contents/ui/: CompactView.qml  DeviceCard.qml  PowerSourceList.qml  main.qml
src/plasmoid/plugin/: DeviceModel.cpp  DeviceModel.h  WhatCablePlugin.cpp  WhatCablePlugin.h
