cmake_minimum_required(VERSION 3.20)
project(whatcable-linux VERSION 0.1.0 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_AUTOMOC ON)
set(QT_MAJOR_VERSION 6)

find_package(ECM QUIET NO_MODULE)
if(ECM_FOUND)
    set(CMAKE_MODULE_PATH ${ECM_MODULE_PATH})
    include(KDEInstallDirs)
    include(KDECMakeSettings)
    include(KDECompilerSettings NO_POLICY_SCOPE)
endif()

find_package(Qt6 REQUIRED COMPONENTS Core)
find_package(PkgConfig REQUIRED)
pkg_check_modules(UDEV REQUIRED libudev)

add_subdirectory(src/core)
add_subdirectory(src/cli)

# Plasmoid requires KDE Frameworks 6
if(ECM_FOUND)
    find_package(Qt6 COMPONENTS Quick Qml)
    find_package(KF6 COMPONENTS I18n CoreAddons Package)
    find_package(Plasma)
    if(Qt6Quick_FOUND AND KF6Package_FOUND AND Plasma_FOUND)
        add_subdirectory(src/plasmoid)
        message(STATUS "KDE Plasma 6 found — Plasmoid will be built")
    else()
        message(STATUS "KDE Plasma 6 dependencies incomplete — skipping Plasmoid")
        message(STATUS "  Qt6Quick: ${Qt6Quick_FOUND}, KF6Package: ${KF6Package_FOUND}, Plasma: ${Plasma_FOUND}")
    endif()
else()
    message(STATUS "ECM not found — skipping Plasmoid (install extra-cmake-modules, kf6-*, libplasma-devel)")
endif()
